docs/examples/good/good-import-abstraction-001.dart
import 'package:app/src/domain/user_repository.dart';

class UserBloc {
  final UserRepository _repo;

  UserBloc(this._repo);
}
