docs/examples/bad/bad-import-implementation-001.dart
import 'package:app/src/data/user_repository_impl.dart';

class UserBloc {
  final UserRepositoryImpl _repo = UserRepositoryImpl();
}
